fixed some bug